bat.bool1.parottrouble.ParotTrouble.scala.error
Erreur de compilation :
ParotTrouble:2: error: value or is not a member of Boolean
  if (talking && hour<7 or talking && hour>20) {
                        ^